# aida-os

./: .env.example  .gitignore  ALPHA.md  CLAUDE.md  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: build-iso.yml
agents/: __init__.py  aida.py  archon.py  base.py  hermes.py  orchestrator.py  research.py  security.py  storage.py  sysadmin.py
aidad/: __init__.py  __main__.py  api.py  chat.py  daemon.py  hardware.py  registry.py  scheduler.py  selfheal.py  selfimprove.py  settings.py
ansible/: inventory.yml  site.yml
ansible/roles/aida_daemon/tasks/: main.yml
ansible/roles/dev_tools/tasks/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/gitea/tasks/: main.yml
ansible/roles/litellm/tasks/: main.yml
archiso/: archinstall.json  packages.x86_64  profiledef.sh
archiso/airootfs/etc/: motd
archiso/airootfs/root/: .automated_script.sh  .bash_profile
archiso/efiboot/loader/: loader.conf
bus/: __init__.py  client.py
capabilities/: __init__.py  model.py
config/: agents.yaml  models.yaml  settings.yaml
docs/: agents.md  aidad.md  archiso.md  bus.md  capabilities.md  chat.md  ci.md  config.md  mpi.md  seeder.md  selfheal.md  selfimprove.md  setup.md
mpi/: __init__.py  client.py
proxmox/: README.md  backup.ps1  firstboot.sh  post-install.sh  setup.sh
scripts/: bootstrap.sh  build-iso-docker.sh  build-iso.ps1  build-iso.sh
seeder/: __init__.py  seeder.py
setup/: __init__.py  installer.py  profile.py  providers.py  recommender.py  wizard.py
tests/: test_capabilities.py  test_registry.py
(+13 files in other folders)
