[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aida-os"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Agent orchestration
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-community>=0.3",
    # Model Provider Interface
    "litellm>=1.40",
    # Message bus
    "nats-py>=2.6",
    # API server
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
    # Data / config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6",
    # System introspection
    "psutil>=5.9",
    "py-cpuinfo>=9",
    # P2P model distribution (libtorrent is installed via pacman on Arch,
    # the pip package is a fallback for other platforms)
    "libtorrent>=2.0; sys_platform != 'linux'",
    # Scheduler
    "apscheduler>=3.10",
    # Persistence (Hermes memory)
    "chromadb>=0.5",
    "sentence-transformers>=3",
    # Terminal UI for setup wizard
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
aidad        = "aidad.__main__:main"
aida-setup   = "setup.wizard:main"
aida-chat    = "aidad.chat:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aidad*", "agents*", "mpi*", "bus*", "capabilities*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
